@@ -2,6 +2,8 @@ Revision history for Smartcat-App
 
 {{$NEXT}}
 
+        - Fix the detection of empty .po files
+
 0.0.3  2020-07-20 22:40:42 UTC
         - Set up version of Smartcat::Client => 0.0.2
 
